--- a/index.html
+++ b/index.html
@@ -1,253 +1,432 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>BotUI - Hello World</title>
-    <meta name="viewport" content="width=device-width", initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/botui/build/botui-theme-default.css" />
-  </head>
-  <body>
-    <div class="botui-app-container" id="LMISBOT">
-      <bot-ui></bot-ui>
-    </div>
-  <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
-  <script src="https://unpkg.com/botui/build/botui.min.js"></script>
+<?xml version="1.0" encoding="UTF-8" ?> 
 
-  <script>
-    var botui = new BotUI('LMISBOT');
+<script type="text/JavaScript">
 
-//******************//
-// 最初のメッセージ //
-//******************//
-  botui.message.bot({
-    content: 'こんにちは!'
-  }).then();
+	//ポップアップ呼び出し用Wait画像参照変数
+	var Waiter;
 
-  botui.message.bot({
-    delay: 1000, 
-    content: unescape('LMISボットです!')
-  }).then();
+	//ポップアップコメントオブジェクト参照変数
+	var PopUpField;
+	//ポップアップ表示幅
+	var PopUpWidth = 400;
+	//ポップアップ表示高さ
+	var PopUpHeight = 540;
+	//表示・消去処理速度
+	var ViewSpeed = 20;
 
-  botui.message.bot({
-    delay: 2000, 
-    content: unescape('LMISボットにお問い合わせいただき、ありがとうございます。')
-  }).then(init);
+	//待ち受け画像参照変数
+	var ImgWait;
+	//キャラクタ画像参照変数
+	var Img;
+	//しゃべるキャラクタ画像参照変数
+	var ImgTalk;
+	//コメントフィールド参照変数
+	var CommentField;
+	//コメント表示スクロール位置保持変数
+	var CommentScrollTop =10;
 
-//****************//
-// 実施可否を選択 //
-//****************//
-  function init() {
-    var i = 0;
-    botui.message.bot({
-      delay: 1000,  //1秒 表示タイミングを待つ
-      content: 'では、はじめますか？'
-    }).then(function() {
+	//質問フィールド参照変数
+	var QuestionField;
+	//送信ボタン参照変数
+	var SubmitBtn;
+	//Closeボタン参照変数
+	var CloseBtn;
 
-    // ボタンを表示する．
-    return botui.action.button({
-        autoHide: false,
-        delay: 1000,
-        action: [
-          {icon: 'circle-o', text: 'はい', value: 'asketc'},
-          {icon: 'times',text:   'いいえ', value: 'askend'}
-        ]
-      });
-    }).then(function(res) {
-        // ボタンの回答結果から処理を分岐する
-        botui.action.hide();
-        switch (res.value) {
-          case 'asketc': asketc(); break;
-          case 'askend': showAskend(); break;
-          default: end();
-        }
-      });    
-  }
 
-//**********//
-// asketc() //
-//**********//
-  function asketc() {
-  botui.message.add({
-      delay: 1000,
-      content: '何について知りたいですか？'
-    }).then();
-    botui.message.add({
-      delay: 1500,
-      content: '以下のボタンからご選択ください。'
-    }).then(function() {
-      // ボタンを表示する．
-      return botui.action.button({
-        delay: 1000,
-        action: [
-          { text: 'ユニリタについて', value: 'unirita'},//回答1
-          { text: 'LMISについて', value: 'lmis'},       //回答2
-          { text: 'その他', value: 'asketc'},
-          { text: 'やめる', value: 'askend'}
-        ]
-      });
-    }).then(function(res) {
-      switch (res.value) {
-        case 'unirita': unirita(); break; //回答1から問題1へ
-        case 'lmis': lmis(); break;       //回答2から問題2へ(未実装)
-        case 'asketc': asketc(); break;
-        case 'askend': showAskend(); break;
-      }
-    });
-}
 
-//***********//
-// unirita() //
-//***********//
-function unirita(){
-  botui.message.add({
-      delay: 1000,
-      content: 'ユニリタについて学んでみましょう。'
-    }).then();
-      botui.message.bot({
-        delay: 1000, 
-        content: unescape('以下のボタンからご選択ください。')
-    }).then(function() {
-      // ボタンを表示する．
-      return botui.action.button({
-        delay: 1000,
-        action: [
-          { text: 'ユニリタの意味は', value: 'unirita1'},         //回答1
-          { text: 'その他', value: 'asketc'},                     //
-          { text: 'やめる', value: 'askend'}                      //
-        ]
-      });
-    }).then(function(res) {
-        switch (res.value) {
-          case 'unirita1': unirita1(); break;//回答1から問題1へ(未実装)
-          case 'asketc': asketc(); break;    //回答4から問題4へ
-          case 'askend': showAskend(); break;
-        }
-      });
-  }
+	//ページロード時の処理
+	window.onload = function(){
 
-//************//
-// unirita1() //
-//************//
-function unirita1(){
-  botui.message.add({
-      delay: 1000,
-      content: 'ユニークな発想でサービス提供＋お客様の利益に資する利他の精神'
-    }).then();
-      botui.message.bot({
-        delay: 1000, 
-        content: unescape('以下のボタンからご選択ください。')
-    }).then(function() {
-      // ボタンを表示する．
-      return botui.action.button({
-        delay: 1000,
-        action: [
-          { text: 'その他', value: 'asketc'},
-          { text: 'やめる', value: 'askend'}
-        ]
-      });
-    }).then(function(res) {
-        switch (res.value) {
-          case 'asketc': asketc(); break;
-          case 'askend': showAskend(); break;
-        }
-      });
-  }
+	//---------待ち受け画像エリア------
 
-//********//
-// lmis() //
-//********//
-function lmis(){
-  botui.message.add({
-      delay: 1000,
-      content: 'LMISについて学んでみましょう。'
-    }).then();
-      botui.message.bot({
-        delay: 1000, 
-        content: unescape('以下のボタンからご選択ください。')
-    }).then(function() {
-      // ボタンを表示する．
-      return botui.action.button({
-        delay: 1000,
-        action: [
-          { text: 'LMISの意味は', value: 'lmis1'},
-          { text: 'その他', value: 'asketc'},
-          { text: 'やめる', value: 'askend'}
-        ]
-      });
-    }).then(function(res) {
-        switch (res.value) {
-          case 'lmis1': lmis1(); break;//回答1から問題1へ(未実装)
-          case 'asketc': asketc(); break;    //回答4から問題4へ
-          case 'askend': showAskend(); break;
-        }
-      });
-  }
+		//画像の表示位置等のパラメータ
+		ImgWait = document.createElement('img');
+		ImgWait.src = "http://3.bp.blogspot.com/-X3dsEqOx6dE/VqncqDziPHI/AAAAAAAA3YA/ui_DeytNpEg/s180-c/job_news_caster_man.png";
+		ImgWait.style="position:absolute;"
+		ImgWait.width = 40;
+		ImgWait.height = 40;
+		ImgWait.style.top = -2;
+		ImgWait.style.left = -1;
 
-//*********//
-// lmis1() //
-//*********//
-function lmis1(){
-  botui.message.add({
-      delay: 1000,
-      content: 'Lifecycle Management for Intelligence Service'
-    }).then();
-      botui.message.bot({
-        delay: 1000, 
-        content: unescape('以下のボタンからご選択ください。')
-    }).then(function() {
-      // ボタンを表示する．
-      return botui.action.button({
-        delay: 1000,
-        action: [
-          { text: 'その他', value: 'asketc'},
-          { text: 'やめる', value: 'askend'}
-        ]
-      });
-    }).then(function(res) {
-        switch (res.value) {
-          case 'asketc': asketc(); break;
-          case 'askend': showAskend(); break;
-        }
-      });
-  }
+	//---------待ち受け画像エリア------
 
-//********************//
-// 終了するか聞く関数 //
-//********************//
-function showAskend(){
-  botui.message.add({
-    delay:1500,
-    content: '終了してもいいですか？'
-  }).then(function() {
 
-    // ボタンを表示する．
-    return botui.action.button({
-      delay: 1000,
-      action: [
-        {icon: 'circle-o', text: 'はい', value: false},
-        {icon: 'times',  text: 'いいえ', value: true}]
-    });
-  }).then(function(res) {
-    res.value ? init() : end();
-    });
-}
+		//待ち受け画像の生成と表示
+		Waiter = new WaitImg();
+		Waiter.View();
 
-//**************//
-// 終了する関数 //
-//**************//
-function end() {
-    botui.message.add({
-          delay: 1000,
-          content: 'また来てね'
-        }).then(function(){
-          return botui.message.add({
-            delay: 1000,
-            content: 'バイバイ！'
-        });
-    });
-}
+		//ポップアップフィールドを生成する
+		PopUpField =  new PopUpComment();
+
+
+	//---------キャラクタ画像エリア------
+
+		//画像の表示位置等のパラメータ
+		ImgNormal = document.createElement('img');
+		ImgNormal.id = "ImgNormalID";
+		ImgNormal.src = "https://4.bp.blogspot.com/-xN3OofpDu2A/XAnvN3Vpj-I/AAAAAAABQmA/guSSixGZ6cYFey2lgEUnc5q3mEUj6quOACLcBGAs/s800/business_man1_1_smile.png";
+		ImgNormal.style="position:absolute;"
+		ImgNormal.width = 160;
+		ImgNormal.style.top = 90;
+		ImgNormal.style.left = 0;
+
+	//---------キャラクタ画像エリア------
+
+	//---------しゃべるキャラクタ画像エリア------
+
+		//画像の表示位置等のパラメータ
+		ImgTalk = document.createElement('img');
+		ImgTalk.src = "https://3.bp.blogspot.com/-dSPRqYvIhNk/XAnvPdvjBFI/AAAAAAABQmM/izfRBSt1U5o7eYAjdGR8NtoP4Wa1_Zn8ACLcBGAs/s800/business_man1_4_laugh.png";
+		ImgTalk.style="position:absolute;"
+		ImgTalk.width = 160;
+		ImgTalk.style.top = 90;
+		ImgTalk.style.left = 0;
+
+	//---------しゃべるキャラクタ画像エリア------
+
+
+
+
+	//---------コメントスクロールエリア------
+
+		//コメント表示部のiframeを作成する
+		CommentField = document.createElement("iframe");
+
+		//iframeをポップアップコメントに追加
+		PopUpField.Div.appendChild(CommentField);
+
+		//iframeの見栄えをセット
+		CommentField.setAttribute("frameBorder", "0");
+		CommentField.setAttribute("scrolling", "yes");
+
+		// iframeの大きさや表示位置をセット
+		CommentField.style.position = "absolute";
+		CommentField.style.top = 40;
+		CommentField.style.left = 160;
+		CommentField.style.width = 230;
+		CommentField.style.height = 350;
+
+	//---------コメントスクロールエリア------
+
+
+	//---------質問テキストボックス----
+
+		//テキストエリアの生成
+		QuestionField = document.createElement('textarea');
+
+		//スクロールバーを非表示
+		QuestionField.style.overflow = "hidden";
+
+		QuestionField.style.fontSize = "12";
+		QuestionField.style.color = "black";
+		QuestionField.style.borderRadius = 5;
+
+		QuestionField.style.position = "absolute";
+		QuestionField.style.top = 420;
+		QuestionField.style.left = 20;
+		QuestionField.style.width = 350;
+		QuestionField.style.height = 60;
+
+	//---------質問テキストボックス----
+
+
+	//---------送信ボタン--------------
+
+		//送信ボタンの生成
+		SubmitBtn = document.createElement('button');
+
+		SubmitBtn.textContent = "送信";
+		SubmitBtn.style.fontSize = "12";
+		SubmitBtn.style.position = "absolute";
+		SubmitBtn.style.top = 500;
+		SubmitBtn.style.left = 320;
+
+		//マウスイベントハンドラの追加（送信ボタン）
+		SubmitBtn.addEventListener('click',SubmitOnClick , false);
+
+	//---------送信ボタン--------------
+
+
+	//---------Closeボタン--------------
+
+		//Closeボタンの生成
+		CloseBtn = document.createElement('button');
+
+		CloseBtn.textContent = "閉じる";
+		CloseBtn.style.fontSize = "12";
+		CloseBtn.style.color = "#000000";
+		CloseBtn.style.backgroundColor = "#DCDCDC";
+		CloseBtn.style.position = "absolute";
+		CloseBtn.style.top = 10;
+		CloseBtn.style.left = 340;
+
+		//マウスイベントハンドラの追加（Closeボタン）
+		CloseBtn.addEventListener('click',CloseOnClick , false);
+
+	//---------Closeボタン--------------
+
+		//POPUPに初期画像を組み込む
+		PopUpField.Div.appendChild(ImgNormal);
+		var Question = new CommentCls(1,"こんにちは。\n何でも聞いてくださいね。");
+
+	};
+
+
+
+	//リサイズ時に表示位置を変更する
+	window.onresize = function () {
+ 
+		timer = setTimeout(function () {
+
+			//待機画像の表示変更
+			Waiter.View();
+			//ポップアップの表示変更
+			PopUpField.View(PopUpHeight - ViewSpeed);
+
+		}, 100);
+	};
+
+	//スクロール時に表示位置を変更する
+	window.onscroll = function () {
+
+		timer = setTimeout(function () {
+
+			//待機画像の表示変更
+			Waiter.View();
+			//ポップアップの表示変更
+			PopUpField.View(PopUpHeight - ViewSpeed);
+
+		}, 100);
+	};
+
+
+	//コメントクラスの定義
+    	var CommentCls = function(Mode,Message) {
+
+		//テキストエリアの生成
+		Text = document.createElement('textarea');
+		Text.style.fontSize = "12";
+		Text.style.color = "black";
+		Text.style.borderRadius = 5;
+
+		Text.style.position = "absolute";
+		Text.style.top = CommentScrollTop;
+		Text.style.width = 150;
+
+		//質問か答えかを判別して表示位置と色を変更する（0は質問、1は答え）
+		if(Mode == 0){
+			Text.style.backgroundColor = "#FFFFCC";
+			Text.style.left = 50;
+		}
+		else{
+			Text.style.backgroundColor = "#FFEBCD";
+			Text.style.left = 10;
+			//しゃべる画像に変更する
+			PopUpField.Div.removeChild(ImgNormal) 
+			PopUpField.Div.appendChild(ImgTalk);
+			//数秒後に画像をもとに戻す
+			setTimeout(function(){
+				PopUpField.Div.removeChild(ImgTalk);
+				PopUpField.Div.appendChild(ImgNormal);
+			},2000);
+		}
+
+		//表示内容の入力
+		Text.innerHTML = Message;
+
+		//Divにテキストエリアを組み込む
+		CommentField.contentDocument.body.appendChild(Text);
+		//テキストエリアの高さを調整
+		Text.style.height = parseInt(Text.scrollHeight) + 5;
+		//スクロール位置を変更する
+		CommentScrollTop = CommentScrollTop + parseInt(Text.style.height) + 10;
+		CommentField.contentDocument.body.scrollTop = CommentScrollTop;
+	}
+
+
+	//ポップアップクラスの定義
+    	var PopUpComment = function() {
+
+		//Divレイヤの定義
+		this.Div = document.createElement('div'); 
+		this.Div.style.position = "absolute";
+
+		this.Div.style.width = PopUpWidth;
+		this.Div.style.height = 0;
+		this.Div.style.backgroundColor = "#CCFFFF";
+		this.Div.style.border = "outset 2px #66CCFF";
+		this.Div.style.borderRadius = "20px";
+
+		//最初は非表示
+		this.Div.style.visibility = "hidden";
+		//最前面に表示する
+		this.Div.style.zIndex = 1000;
+
+		//ページにPOPUP（Div)を組み込む
+		document.body.appendChild(this.Div);
+
+		//画面上への表示
+		this.View = function(vHeight){
+
+			//表示位置の取得
+			var viewX = document.body.clientWidth - PopUpWidth - 20 + document.body.scrollLeft;
+			var viewY = document.body.clientHeight - PopUpHeight -20 + document.body.scrollTop;
+
+			//表示位置の指定
+			this.Div.style.left = viewX;
+	 		this.Div.style.height = vHeight + ViewSpeed;
+			this.Div.style.top = viewY + PopUpHeight -  (vHeight + ViewSpeed);
+
+			if (parseInt(this.Div.style.height) < PopUpHeight){
+				setTimeout(function(){ PopUpField.View((vHeight + ViewSpeed)) },10);
+			}
+			else{
+				//質問エリアにフォーカスをセット
+				QuestionField.focus();
+			}
+
+		}
+
+
+		//画面からの消去
+		this.Hide= function(vHeight){
+
+			//表示位置の取得
+			var viewX = document.body.clientWidth - PopUpWidth - 10;
+			var viewY = document.body.clientHeight - PopUpHeight -10;
+
+			//表示位置の指定
+			this.Div.style.left = viewX + document.body.scrollLeft;
+	 		this.Div.style.height = vHeight - ViewSpeed;
+			this.Div.style.top = viewY + PopUpHeight -  (vHeight - ViewSpeed) + document.body.scrollTop;
+
+			if (parseInt(this.Div.style.height) > ViewSpeed+30){
+				setTimeout(function(){ PopUpField.Hide((vHeight - ViewSpeed)) },10);
+			}
+			else{
+				//表示中の画像パターンを消去する
+				if(document.getElementById("ImgNormalID")){
+					PopUpField.Div.removeChild(ImgNormal);
+				}
+				else{
+					PopUpField.Div.removeChild(ImgTalk);
+				}
+				//POPUPから要素を消去
+				PopUpField.Div.removeChild(SubmitBtn);
+				PopUpField.Div.removeChild(CloseBtn);
+				PopUpField.Div.removeChild(QuestionField);
+
+				//iframeのサイズを最小化
+				CommentField.style.height = "1px";
+				//ポップアップを非表示
+				PopUpField.Div.style.visibility = "hidden";
+			}
+		}
+	}
+
+
+
+	//待機画像クラスの定義
+    	var WaitImg = function() {
+
+		//Divレイヤの定義
+		this.Div = document.createElement('div'); 
+		this.Div.style.position = "absolute";
+
+		this.Div.style.width = 40;
+		this.Div.style.height = 40;
+		this.Div.style.backgroundColor = "#FFEBCD";
+		this.Div.style.border = "outset 2px #FF8C00";
+		this.Div.style.borderRadius = "20px";
+
+		//POPUPの１つ下の階層に表示する
+		this.Div.style.zIndex = 999;
+
+		//ページに待機画像（Div)を組み込む
+		document.body.appendChild(this.Div);
+
+		this.Div.appendChild(ImgWait);
+
+		//画面上への表示
+		this.View = function(){
+
+			//表示位置の取得
+			var viewX = document.body.clientWidth - 80 + document.body.scrollLeft;
+			var viewY = document.body.clientHeight - 70 + document.body.scrollTop;
+
+			//表示位置の指定
+			this.Div.style.left = viewX;
+			this.Div.style.top = viewY;
+
+		}
+
+		//マウスイベントハンドラの追加
+		this.Div.onclick = function(){
+			//ポップアップの表示
+			ViewPopUp();
+		}
+
+	}
+
+
+	//ポップアップの表示
+	function ViewPopUp(){
+
+		//POPUPに要素を組み込む
+		PopUpField.Div.appendChild(ImgNormal);
+		PopUpField.Div.appendChild(SubmitBtn);
+		PopUpField.Div.appendChild(CloseBtn);
+		PopUpField.Div.appendChild(QuestionField);
+
+		//iframeのサイズを最大化
+		CommentField.style.height = "350px";
+		//ポップアップを表示
+		PopUpField.Div.style.visibility = "visible";
+		PopUpField.View(0);
+	}
+
+
+	//ポップアップの消去
+	function CloseOnClick(){
+
+		//ポップアップ消去
+		PopUpField.Hide(PopUpHeight);
+	}
+
+
+	//質問の送信
+	function SubmitOnClick(){
+
+		//質問の送信
+		if(QuestionField.value){
+
+			//テキストエリアの改行コードを削除
+			var InputText = QuestionField.value
+			InputText = InputText.replace( /\n/g , "" ) ;
+			//質問の表示
+			var Question = new CommentCls(0,InputText);
+			//テキストエリアのクリア
+			QuestionField.value = "";
+
+              　        //FormDataクラスのインスタンスを生成
+              　        var BotRequest = new FormData();
+              　        BotRequest.append('apikey','DZZ8AO1OlFLrXdYWgZXPEIL0HQtcnhqq');
+　                      BotRequest.append('query',InputText);
+
+              　        //POSTでAPIをコールする
+              　        fetch('https://api.a3rt.recruit-tech.co.jp/talk/v1/smalltalk',
+              　        { method:'post',body:BotRequest,}).then(Response => {
+　　　                      //Response.json()の応答を待って処理を行う
+　　　                      Response.json().then(Data => {
+　　　　　                      //回答の出力
+　　　　　                      var Question = new CommentCls(1,Data.results[0].reply);
+　　               　       })
+     　                 });
+		}
+
+		//質問エリアにフォーカスをセット
+		QuestionField.focus();
+
+	}
+
 </script>
-
-</body>
-</html>
