--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		ImgWait.height = 40;
 		ImgWait.style.top = -2;
 		ImgWait.style.left = -1;
+		ImgWait.style.right = 0px;
+		ImgWait.style.bottom = 0px;
+
 
 	//---------待ち受け画像エリア------
 
